--- a/src/pool/DonationSuccess.css
+++ b/src/pool/DonationSuccess.css
@@ -1,13 +1,16 @@
 .DonationSuccess {
   background-color: #faf8ea;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .DonationSuccess__logo {
   display: block;
   height: 50px;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 30px;
 }
 
@@ -25,8 +28,9 @@
 }
 
 .DonationSuccess__merci {
-  padding-top: 80px;
+  padding-top: 85px;
   margin-top: 100px;
+  margin-bottom: 0;
 }
 
 .DonationSuccess__totalCount {
@@ -36,7 +40,7 @@
   box-sizing: border-box;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.06);
   border-radius: 16px;
-  height: 80px;
+  height: 85px;
   width: 200px;
   top: -20px;
   left: 50%;
@@ -50,12 +54,21 @@
 
 .DonationSuccess__totalCount {
   font-family: "Open Sans";
-  font-size: 12px;
   color: #181818;
+}
+
+.DonationSuccess h1 {
+  font-size: 27px;
 }
 
 .DonationSuccess__totalCount h1 {
   margin: 0;
+  font-size: 45px;
+}
+
+.DonationSuccess__totalCount span {
+  font-size: 11px;
+  margin-top: -7px;
 }
 
 .DonationSuccess p {
@@ -77,4 +90,31 @@
   justify-content: center;
   align-items: center;
   top: -12px;
+}
+
+.DonationSuccess__bgFouet {
+  position: absolute;
+  width: 130px;
+  right: -50px;
+}
+
+.DonationSuccess__bgSpatule {
+  position: absolute;
+  width: 100px;
+}
+
+.DonationSuccess__bgCouteau {
+  position: absolute;
+  right: 200px;
+  top: 300px;
+  width: 150px;
+}
+
+
+.DonationSuccess__bgCookies {
+  position: absolute;
+  right: 150px;
+  bottom: 45px;
+  width: 150px;
+  z-index: 0;
 }
