--- a/src/howWorks/HowWorks.css
+++ b/src/howWorks/HowWorks.css
@@ -1,3 +1,33 @@
 .HowWorks {
-    
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.HowWorks__title {
+  font-family: "DM Serif Text";
+  font-size: 17px;
+  color: #181818;
+  margin: 20px 0px;
+}
+
+.HowWorks__step {
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
+}
+
+.HowWorks__step__number {
+  font-family: "DM Serif Text";
+  font-size: 48px;
+  color: #397e47;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.HowWorks__step__description {
+  font-family: "Open Sans";
+  color: #141414;
+  font-size: 12px;
+  font-weight: 600;
 }
