--- a/src/button/Button.css
+++ b/src/button/Button.css
@@ -11,8 +11,8 @@
   color: white;
   font-family: "Open Sans";
   font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
+  font-weight: 600;
+  font-size: 14px;
   line-height: 16px;
   outline: none;
 }
