--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
   height: 100%;
 }
 
+body.modal-open {
+  overflow: hidden !important;
+}
+
 h1 {
   margin: 0;
   font-family: "DM Serif Text";
@@ -13,4 +17,13 @@ h1 {
 #root {
   width: 100%;
   height: 100%;
+}
+
+.emphasis {
+  color: #11782e;
+  border-bottom: 1px solid #11782e;
+}
+
+.green {
+  color: #11782e;
 }
