--- a/src/pool/DonationSuccess.css
+++ b/src/pool/DonationSuccess.css
@@ -8,15 +8,36 @@
 
 .DonationSuccess__logo {
   display: block;
-  height: 50px;
+  height: 80px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 30px;
 }
 
+.DonationSuccess__merci__wrapper {
+  position: relative;
+  width: 500px;
+  margin: auto;
+}
+
+.DonationSuccess__successLeftHand {
+  position: absolute;
+  width: 100px;
+  top: 35px;
+  left: -70px;
+}
+
+.DonationSuccess__successRightHand {
+  position: absolute;
+  width: 120px;
+  top: 25px;
+  right: -70px;
+}
+
 .DonationSuccess__merci,
-.DonationSuccess__comment {
-  width: 400px;
+.DonationSuccess__share,
+.DonationSuccess__new {
+  width: 500px;
   margin: auto;
   margin-top: 30px;
   background: #ffffff;
@@ -72,8 +93,8 @@
 }
 
 .DonationSuccess p {
-    font-family: 'Open Sans';
-    font-size: 14px;
+  font-family: "Open Sans";
+  font-size: 14px;
 }
 
 .DonationSuccess__newCount {
@@ -110,11 +131,39 @@
   width: 150px;
 }
 
-
 .DonationSuccess__bgCookies {
   position: absolute;
   right: 150px;
   bottom: 45px;
   width: 150px;
   z-index: 0;
+}
+
+.DonationSuccess__new h1 {
+  font-size: 19px;
+  margin-top: 0px;
+}
+
+@media screen and (max-width: 767px) {
+  .DonationSuccess {
+    width: 100%;
+    overflow: hidden;
+  }
+  .DonationSuccess__merci__wrapper {
+    width: 100%;
+  }
+  .DonationSuccess__successLeftHand,
+  .DonationSuccess__successRightHand,
+  .DonationSuccess__bgFouet,
+  .DonationSuccess__bgSpatule,
+  .DonationSuccess__bgCouteau,
+  .DonationSuccess__bgCookies {
+    display: none;
+  }
+
+  .DonationSuccess__merci,
+  .DonationSuccess__share,
+  .DonationSuccess__new {
+    width: 100%;
+  }
 }
