--- a/src/assoList/AssoList.css
+++ b/src/assoList/AssoList.css
@@ -1,6 +1,6 @@
 .AssoList h1 {
     font-family: 'DM Serif Text';
-    font-size: 17px;
+    font-size: 16px;
     text-align: center;
     margin-bottom: 10px;
 }
@@ -8,14 +8,14 @@
 .AssoList__images {
     overflow-x:auto;
     display: flex;
-    max-width: 500px;
+    width:calc(100% - 30px);
     margin: auto;
     justify-content: space-between;
 }
 
 .AssoList__images img {
     margin-right: 10px;
-    width: 90px;
+    width: 110px;
 }
 
 
