--- a/src/howWorks/HowWorks.css
+++ b/src/howWorks/HowWorks.css
@@ -3,16 +3,14 @@
   justify-content: space-between;
   margin: auto;
   margin-bottom: 20px;
-  max-width: calc(100% - 120px);
+  width: 100%;
 }
 
 .HowWorks__title {
   font-family: "DM Serif Text";
-  font-size: 17px;
+  font-size: 16px;
   color: #181818;
-  margin: 20px 0px;
-  margin: auto;
-  max-width: calc(100% - 120px);
+  margin: 20px auto;
 }
 
 .HowWorks__step {
@@ -37,10 +35,9 @@
   text-align: left;
 }
 
-
 @media screen and (max-width: 767px) {
-
-  .HowWorks, .HowWorks__title {
+  .HowWorks,
+  .HowWorks__title {
     display: block;
     max-width: calc(100% - 40px);
     text-align: center;
