--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,14 @@ body {
   height: 100%;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-weight: normal !important;
+}
+
+* {
+  -webkit-font-smoothing: antialiased;
+}
+
 body.modal-open {
   overflow: hidden !important;
 }
