--- a/src/input/Input.css
+++ b/src/input/Input.css
@@ -10,9 +10,10 @@
   box-sizing: border-box;
   border-radius: 4px;
   padding: 4px 10px;
-  font-weight: 600;
+  font-weight: 500;
   font-size: 12px;
   line-height: 28px;
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 
 .Input::placeholder {
