--- a/src/modal/Modal.css
+++ b/src/modal/Modal.css
@@ -13,7 +13,7 @@
 }
 
 .Modal {
-  min-width: 100px;
+  min-width: 450px;
   min-height: 100px;
   box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.05);
   border-radius: 8px;
@@ -49,9 +49,10 @@
 
 .Modal__content h1 {
   font-family: "DM Serif Text";
-  font-size: 28px;
+  font-size: 30px;
   text-align: center;
   color: #181818;
+  line-height: 40px;
   margin-bottom: 20px;
 }
 
