--- a/src/pool/GiveModule.css
+++ b/src/pool/GiveModule.css
@@ -28,15 +28,25 @@
 .GiveModule__MealButtons {
   display: flex;
   margin-bottom: 20px;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .GiveModule__MealButton {
+  margin-top: 80px;
+}
+
+.GiveModule__MealButton .clap--count-total {
+  display: none !important;
+}
+
+.GiveModule__MealButton__Icon {
+  margin-left: -8px;
+  margin-top: -4px;
   background: #11782e;
   box-shadow: 0px 3px 4px rgba(19, 21, 20, 0.16);
   border-radius: 150px;
-  width: 70px;
-  height: 70px;
+  width: 72px;
+  height: 72px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -55,7 +65,7 @@
                                 supported by Chrome, Opera and Firefox */
 }
 
-.GiveModule__MealButton:hover {
+/* .GiveModule__MealButton:hover {
   transform: scale(0.98);
 }
 
@@ -65,7 +75,7 @@
 
 .GiveModule__MealButton:last-child {
   margin-right: 0;
-}
+} */
 
 .GiveModule .EditableText {
   font-size: 27px;
@@ -80,7 +90,7 @@
 .GiveModule__MealCount p {
   font-family: Open Sans;
   font-weight: 600;
-  font-size: 14px;
+  font-size: 13px;
   color: #181818;
   margin-top: 20px;
 }
@@ -127,5 +137,8 @@
   .GiveModule {
     padding: 20px !important;
     background-color: #faf29a;
+    width: calc(100% + 60px);
+    position: relative;
+    left: -30px;
   }
 }
