--- a/src/modal/Modal.css
+++ b/src/modal/Modal.css
@@ -84,6 +84,7 @@
     width: 100%;
     z-index: 100;
     border-radius: 0;
+    min-width: 0;
   }
   .Modal__rightHand, .Modal__leftHand {
     display:none;
