--- a/src/assoList/AssoList.css
+++ b/src/assoList/AssoList.css
@@ -15,7 +15,11 @@
 
 .AssoList__images img {
     margin-right: 10px;
-    width: 110px;
+    width: 0;
+    flex-grow:1;
+    max-width: 110px;
+    max-height: 110px;
+    margin-bottom: 10px;
 }
 
 
