--- a/src/pool/GiveModule.css
+++ b/src/pool/GiveModule.css
@@ -21,8 +21,8 @@
 }
 
 .GiveModule {
-  padding: 30px;
-  padding-top: 130px;
+  /* padding: 30px; */
+  padding: 110px 30px 0px 30px;
 }
 
 .GiveModule__MealButtons {
@@ -32,7 +32,7 @@
 }
 
 .GiveModule__MealButton {
-  margin-top: 80px;
+  margin-top: 30px;
 }
 
 .GiveModule__MealButton .clap--count-total {
@@ -97,7 +97,7 @@
 .GiveModule__MealCount p {
   font-family: Open Sans;
   font-weight: 600;
-  font-size: 13px;
+  font-size: 12px;
   color: #181818;
   margin-top: 20px;
 }
@@ -117,6 +117,8 @@
 }
 
 .GiveModule__Details p {
+  font-family: Open Sans;
+  font-size: 13px;
   margin: 20px auto;
   color: rgba(0, 0, 0, 0.6);
 }
