--- a/src/pool/Pool.css
+++ b/src/pool/Pool.css
@@ -84,6 +84,10 @@
   font-size: 20px;
 }
 
+.Pool .AssoList__images img:last-child {
+  transform: none;
+}
+
 .PoolSummary__MealCount {
   background: #fff7ad;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -257,3 +261,4 @@
     padding: 30px;
   }
 }
+
