--- a/src/landing/Landing.css
+++ b/src/landing/Landing.css
@@ -2992,16 +2992,45 @@ input[type="submit"] {
 
 .topBanner {
   padding: 10px 20px;
-  background-color: #edebda;
+  background-color: #11782E;
   font-family: Open Sans;
-  color: #333;
+  color: white;
   text-decoration: none;
-  text-align: center;
+  text-align: left;
   font-size: 12px;
   font-weight: 500;
-  -webkit-font-smoothing: subpixel-antialiased;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: auto;
+  z-index: 5;
+  border-radius: 4px;
+  background-image: url('./greenFouet.svg');
+  background-repeat: no-repeat;
+  background-position: 140px 0px;
+  background-size: 100px auto;
+
+}
+
+.topBanner strong {
+  font-weight: bold;
 }
 
 .topBanner a {
-  color: #333;
+  color: white;
+  font-weight: bold;
+}
+
+
+@media screen and (max-width: 767px) {
+  .topBanner {
+    position: relative;
+    width: calc(100% - 20px);
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-bottom: 20px;
+  }
 }
