--- a/src/modal/Modal.css
+++ b/src/modal/Modal.css
@@ -15,6 +15,7 @@
 .Modal {
   min-width: 450px;
   min-height: 100px;
+  max-height: 100vh;
   box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.05);
   border-radius: 8px;
   background-color: white;
@@ -23,6 +24,8 @@
 
 .Modal__content {
   padding: 20px;
+  max-height: 100vh;
+  overflow-y: scroll;
 }
 
 .Modal__leftHand {
