--- a/src/pool/GiveModule.css
+++ b/src/pool/GiveModule.css
@@ -191,8 +191,8 @@
     left: -30px;
   }
   .GiveModule__MealButtons {
-    max-width: 250px;
     margin: auto;
+    margin-top: 30px;
   }
   .GiveModule__MealButton {
     margin-top: 0px;
