--- a/src/collectesSummary/CollectesSummary.css
+++ b/src/collectesSummary/CollectesSummary.css
@@ -63,23 +63,25 @@
   flex-direction: column;
 }
 
+@media (max-width: 992px) {
+  .collectes-summary-section--borders {
+    border: none;
+  }
+}
 
 @media (max-width: 767.98px) {
   .collectes-summary-wrapper {
     flex-direction: column-reverse;
   }
   .collectes-gauge-wrapper {
-      margin-bottom: 30px;
-      box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.06);
-
+    margin-bottom: 30px;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.06);
   }
   .collectes-summary {
-      box-shadow: none;
+    box-shadow: none;
   }
-  .collectes-summary-section--borders {
-      border: none;
-  }
+
   .collectes-summary h3 {
-      font-size: 18px;
+    font-size: 18px;
   }
 }
